Legibility fix for elixir submodule on beige

--- a/Ashokai.novaextension/Themes/Ashokai Creamy beige.css
+++ b/Ashokai.novaextension/Themes/Ashokai Creamy beige.css
@@ -400,7 +400,7 @@ elixir.value.list {
   color: hsl(30, 100%, 43%);
 }
 elixir.identifier.module.submodule {
-  color: hsl(253, 100%, 96%);
+  color: hsl(253, 100%, 26%);
 }
 elixir.identifier {
   color: hsl(31, 100%, 40%);
